@@ -2,23 +2,22 @@ package common;
 
 import eotree.EOProgram;
 import lexer.Scanner;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.DynamicTest;
-import org.junit.jupiter.api.TestFactory;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.parallel.Execution;
 import org.junit.jupiter.api.parallel.ExecutionMode;
 import parser.JavaParser;
 import translator.Translator;
 import tree.Compilation.CompilationUnit;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStreamReader;
+import java.io.*;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.LinkedList;
+import java.util.logging.Level;
+import java.util.logging.LogManager;
+import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -28,10 +27,20 @@ public class TestJ2EO {
 
     private static String testFolderRoot;
     private static final char sep = File.separatorChar;
+    private static final Logger logger = Logger.getLogger("org.eolang.j2eo.test");
 
     @BeforeAll
     static void setup() {
+        boolean testCandidates = System.getProperty("candidates") != null &&
+                System.getProperty("candidates").equals("true");
+
+        if (testCandidates)
+            logger.log(Level.INFO, "Executing candidate tests!");
+
         String testFolderPath = "src" + sep + "test" + sep + "resources";
+        if (testCandidates) {
+            testFolderPath += sep + "test_candidates";
+        }
         File file = new File(testFolderPath);
         testFolderRoot = file.getAbsolutePath();
     }
@@ -102,15 +111,6 @@ public class TestJ2EO {
     }
 
     @TestFactory
-    Collection<DynamicTest> zerothTest() {
-       return new ArrayList<>() {
-           {
-                add(testFile(Paths.get(testFolderRoot + sep + ".." + sep + "TEST0.java")));
-           }
-       };
-    }
-
-    @TestFactory
     Collection<DynamicTest> simpleTest() {
         return new ArrayList<>() {
             {
@@ -127,6 +127,7 @@ public class TestJ2EO {
                     .filter(Files::isRegularFile)
                     .filter(TestJ2EO::isReadyTest)
                     .filter(TestJ2EO::isNotClassFile)
+                    .filter(TestJ2EO::isJavaFile)
                     .collect(Collectors.toList())) {
                 chapterTests.add(testFile(p));
             }
@@ -140,19 +141,26 @@ public class TestJ2EO {
         return DynamicTest.dynamicTest(
                 path.getParent().getFileName().toString() + "/" +
                         path.getFileName().toString(), () -> {
+
+                    logger.info("-- Current test file: " + path.toString());
+
                     // Compile and execute Java file
                     String javaExecOutput = compileAndExecuteJava(path);
 
                     // Run parser
                     CompilationUnit unit = parseAndBuildAST(path);
+                    if (unit == null) {
+                        logger.severe("Java parsing failed!!!");
+                    }
 
                     // EO tree to string
                     String eoCode = translateToEO(unit);
-                    System.out.println("eoCode = \n" + eoCode);
+                    if (eoCode != null) {
+                        logger.info("-- Translation output --" + System.lineSeparator() + eoCode);
+                    }
 
                     // Compile and execute translated to EO Java file
                     String eoExecOutput = compileAndExecuteEO(eoCode, path);
-                    System.out.println("eoExecOutput = \n" + eoExecOutput);
 
                     // Assert equal execution outputs
                     assertEquals(javaExecOutput, eoExecOutput);
@@ -164,12 +172,44 @@ public class TestJ2EO {
         StringBuilder output = new StringBuilder();
         try {
             // Compile .java file
-            Process compileProcess = Runtime.getRuntime().exec("javac " + path.toString());
+            String fileName = path.getFileName().toString().split("\\.")[0];
+            Path subFolder = Paths.get(path.getParent().toString(), fileName + "_java");
+            if (Files.exists(subFolder)) {
+                deleteDirTree(subFolder);
+            }
+            Files.createDirectories(subFolder);
+            Files.copy(path, Paths.get(subFolder.toString(), path.getFileName().toString()));
+            ProcessBuilder compilePb = new ProcessBuilder(
+                    "javac",
+                    "-d",
+                    subFolder.toString(),
+                    path.toString()
+            );
+            compilePb.directory(new File(subFolder.toString()));
+            compilePb.redirectErrorStream(true);
+            Process compileProcess = compilePb.start();
+            BufferedReader stdCompInput = new BufferedReader(new
+                    InputStreamReader(compileProcess.getInputStream()));
+            String sc;
+            StringBuilder javacSb = new StringBuilder();
+            while ((sc = stdCompInput.readLine()) != null) {
+                javacSb.append(sc).append(System.lineSeparator()); // Java compilation output (if any)
+            }
             compileProcess.waitFor();
+            compileProcess.destroy();
+
+            logger.info("-- Java compilation output --" + System.lineSeparator() + javacSb.toString());
 
             // Execute .class file
-            String folder = path.toString().substring(0, path.toString().lastIndexOf(File.separatorChar) + 1);
-            Process execProcess = Runtime.getRuntime().exec("java -cp " + folder + " " + path.toString());
+            ProcessBuilder execPb = new ProcessBuilder(
+                    "java",
+                    "-cp",
+                    subFolder.toString() + sep,
+                    fileName
+            );
+            execPb.directory(new File(subFolder.toString()));
+            execPb.redirectErrorStream(true);
+            Process execProcess = execPb.start();
 
             // Receive output
             BufferedReader stdInput = new BufferedReader(new
@@ -179,20 +219,16 @@ public class TestJ2EO {
                 output.append(s).append(System.lineSeparator());
             }
             execProcess.waitFor();
+            execProcess.destroy();
+
+            logger.info("-- Java execution output --" + System.lineSeparator() + output.toString());
 
             // Remove .class files
-            for (Path p : Files
-                    .walk(Paths.get(folder))
-                    .filter(Files::isRegularFile)
-                    .filter(TestJ2EO::isClassFile)
-                    .collect(Collectors.toList())) {
-                if (!p.toFile().delete()) {
-                    System.err.println("Unable to delete file/dir: \"" + p.toString() + "\"");
-                }
-            }
+            deleteDirTree(subFolder);
 
         } catch (IOException | InterruptedException e) {
             e.printStackTrace();
+            logger.throwing(TestJ2EO.class.getName(), "compileAndExecuteJava", e);
         }
         return output.toString();
     }
@@ -203,17 +239,32 @@ public class TestJ2EO {
         JavaParser parser = new JavaParser(scanner);
         try {
             if (!parser.parse()) {
-                System.err.println("Unable to parse a .java file: \"" + path.toString() + "\"");
+                logger.severe("Unable to parse a .java file: \"" + path.toString() + "\"");
             }
         } catch (IOException e) {
             e.printStackTrace();
+            logger.throwing(TestJ2EO.class.getName(), "parseAndBuildAST", e);
         }
         return parser.ast;
     }
 
     private static String translateToEO(CompilationUnit unit) {
-        EOProgram eoProgram = Translator.translate(unit);
-        return eoProgram.generateEO(0);
+        if (unit == null) {
+            logger.severe("Given AST tree root is null!!! Aborting the translation...");
+            return "abort since parsing failed";
+        }
+        EOProgram eoProgram = null;
+        try {
+            eoProgram = Translator.translate(unit);
+        } catch (Exception e) {
+            logger.throwing(TestJ2EO.class.getName(), "translateToEO", e);
+        }
+        if (eoProgram == null) {
+            logger.severe("Translation failed!!!");
+            return null;
+        } else {
+            return eoProgram.generateEO(0);
+        }
     }
 
     /***
@@ -232,12 +283,15 @@ public class TestJ2EO {
      */
     private static String compileAndExecuteEO(String eoCode, Path testFilePath) {
         StringBuilder eoExecOut = new StringBuilder();
+        String eoFileName = testFilePath.getFileName().toString().split("\\.")[0];
+        Path testFolderPath = Paths.get(testFilePath.getParent().toString(), eoFileName + "_eo");
         try {
             // Setup temporary folders and files
-            String eoFileName = testFilePath.getFileName().toString();
-            eoFileName = eoFileName.substring(0, eoFileName.lastIndexOf('.'));
+            if (Files.exists(testFolderPath)) {
+                deleteDirTree(testFolderPath);
+            }
             Path eoExecDir = Files.createDirectories(
-                    Paths.get(Paths.get(testFilePath.getParent().toString(), eoFileName).toString(), "eo"));
+                        Paths.get(testFolderPath.toString(), "eo"));
             Path eoFilePath = Files.createFile(Paths.get(eoExecDir.toString() + sep + "class_" + eoFileName + ".eo"));
             Files.copy(
                     Paths.get(testFolderRoot, "eo_execution_pom", "pom.xml"),
@@ -260,10 +314,14 @@ public class TestJ2EO {
                 BufferedReader mvnStdInput = new BufferedReader(new
                         InputStreamReader(compileProcess.getInputStream()));
                 String m;
+                StringBuilder mvnSb = new StringBuilder();
                 while ((m = mvnStdInput.readLine()) != null) {
-                    System.out.println(m);
+                    mvnSb.append(m).append(System.lineSeparator());
                 }
                 compileProcess.waitFor();
+                compileProcess.destroy();
+
+                logger.info(" -- EO compilation output --" + System.lineSeparator() + mvnSb.toString());
 
                 // Execute Java ".class"es
                 ProcessBuilder execPb = new ProcessBuilder(
@@ -288,29 +346,47 @@ public class TestJ2EO {
                     eoExecOut.append(s).append(System.lineSeparator());
                 }
                 execProcess.waitFor();
+                execProcess.destroy();
+
+                logger.info("-- EO execution output --" + System.lineSeparator() + eoExecOut.toString());
 
             } catch (InterruptedException e) {
                 e.printStackTrace();
+                logger.throwing(TestJ2EO.class.getName(), "compileAndExecuteEO", e);
             }
 
             // Clean everything out
-            Files.walkFileTree(eoExecDir.getParent(), new SimpleFileVisitor<>() {
-                @Override
-                public FileVisitResult postVisitDirectory(Path dir, IOException exc) throws IOException {
-                    Files.delete(dir);
-                    return FileVisitResult.CONTINUE;
-                }
-                @Override
-                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
-                    Files.delete(file);
-                    return FileVisitResult.CONTINUE;
-                }
-            });
+            deleteDirTree(eoExecDir.getParent());
 
-        } catch (IOException e) {
+        } catch (Exception e) {
             e.printStackTrace();
+            logger.throwing(TestJ2EO.class.getName(), "compileAndExecuteEO", e);
+        }
+
+        // Double check for delete, so that no obsolete files are created after test fail
+        if (Files.exists(testFolderPath)) {
+            try {
+                deleteDirTree(testFolderPath);
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
         }
         return eoExecOut.isEmpty() ? "not passed" : eoExecOut.toString();
+    }
+
+    private static void deleteDirTree(Path path) throws IOException {
+        Files.walkFileTree(path, new SimpleFileVisitor<>() {
+            @Override
+            public FileVisitResult postVisitDirectory(Path dir, IOException exc) throws IOException {
+                Files.delete(dir);
+                return FileVisitResult.CONTINUE;
+            }
+            @Override
+            public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+                Files.delete(file);
+                return FileVisitResult.CONTINUE;
+            }
+        });
     }
 
     private static boolean isReadyTest(Path path) {
@@ -319,6 +395,10 @@ public class TestJ2EO {
 
     private static boolean isClassFile(Path path) {
         return path.toString().endsWith(".class");
+    }
+
+    private static boolean isJavaFile(Path path) {
+        return path.toString().endsWith(".java");
     }
 
     private static boolean isNotClassFile(Path path) {
